--- a/Azure-Functions/VideoIndexer/requirements.txt
+++ b/Azure-Functions/VideoIndexer/requirements.txt
@@ -3,6 +3,6 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions
-requests==2.22.0
+requests
 azure-storage-blob==12.3.0
 azure-identity==1.7.1
